fixed scrollbar

--- a/app/styles/sass/_config.scss
+++ b/app/styles/sass/_config.scss
@@ -54,6 +54,7 @@ $gutter: $grid-gutter-width;
 * {
 	padding: 0;
 	margin: 0;
+	scrollbar-width: none;
 }
 
 ul {
@@ -88,6 +89,11 @@ body {
 
 ._over-hidden {
 	overflow: hidden;
+}
+
+::-webkit-scrollbar {
+	width: 0;
+	height: 0;
 }
 
 //@media (min-width: 1400px) {
