--- a/app/styles/sass/blocks/mounthly-calc.scss
+++ b/app/styles/sass/blocks/mounthly-calc.scss
@@ -27,6 +27,9 @@
 				transform: translate(0, -50%);
 				transition: .4s;
 			}
+			&:hover {
+				background: #566BD1
+			}
 			&.active {
 				&::before {
 					top: 43%;
